# llm-zoomcamp-hw

./: .gitignore  pyproject.toml
llm-zoomcamp-onnx/: onnx.ipynb  pyproject.toml
module 1/exercises/: agentic_ToyAIKit.ipynb  agentic_rag.ipynb  ingest.py  main.py  notebook.ipynb  pyproject.toml  querying.ipynb  rag_helper.py  rag_minsearch.py  sqlite-ingest.ipynb  vector_search_pgvector.ipynb
module 1/homework/: Homework 01.ipynb  rag_helper.py
module 1/llm-zoomcamp-onnx/: onnx_embedd_rag.ipynb  pyproject.toml
module_2/: pyproject.toml
module_2/exercise/: pgvec_RAG.ipynb  sqlite_RAG.ipynb  vector_search.ipynb
module_2/llm-zoomcamp-hw2/: Homework02.ipynb  README.md  pyproject.toml
module_3/: module_3.ipynb
notes/: error_fix_notes.md
